[package]
name = "rssql"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Struct free Rust SQL tool."
homepage = "https://github.com/rikonaka/rssql"
documentation = "https://docs.rs/rssql"
repository = "https://github.com/rikonaka/rssql"
readme = "README.md"
keywords = ["SQL", "MySQL", "PostgreSQL"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = "0.9.90"

[dependencies]
tokio = { version = "^1", features = ["full"] }
sqlx = { version = "^0", features = ["runtime-tokio-native-tls" , "json", "chrono", "bigdecimal", "uuid", "ipnetwork", "mac_address", "bit-vec", "postgres", "mysql"] }
anyhow = "^1"
chrono = "^0"
